@@ -91,7 +91,7 @@ ppcobsd_collect_gregset (const struct regset *regset,
   ppc_collect_fpregset (regset, regcache, regnum, gregs, len);
 }
 
-/* OpenBS/powerpc register set.  */
+/* OpenBSD/powerpc register set.  */
 
 struct regset ppcobsd_gregset =
 {
@@ -164,8 +164,8 @@ static const struct tramp_frame ppcobsd_sigtramp =
   },
   ppcobsd_sigtramp_cache_init
 };
-
 
+
 static void
 ppcobsd_init_abi (struct gdbarch_info info, struct gdbarch *gdbarch)
 {
@@ -204,6 +204,8 @@ _initialize_ppcobsd_tdep (void)
   gdbarch_register_osabi_sniffer (bfd_arch_powerpc, bfd_target_unknown_flavour,
                                   ppcobsd_core_osabi_sniffer);
 
+  gdbarch_register_osabi (bfd_arch_rs6000, 0, GDB_OSABI_OPENBSD_ELF,
+			  ppcobsd_init_abi);
   gdbarch_register_osabi (bfd_arch_powerpc, 0, GDB_OSABI_OPENBSD_ELF,
 			  ppcobsd_init_abi);
 
